libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/INCLSUB.NSN
DEFINE DATA LOCAL
END-DEFINE

INCLUDE SUBLDA

END
